make some changes

--- a/neuropack/web/static/index.html
+++ b/neuropack/web/static/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>NeuroPack Topology</title>
+    <script src="static/js/d3.min.js"></script>
     <style>
         body {
             margin: 0;
@@ -31,7 +32,6 @@
 </head>
 <body>
     <div id="topology-container"></div>
-    <script src="/static/js/d3.min.js"></script>
-    <script src="/static/js/topology.js"></script>
+    <script src="static/js/topology.js"></script>
 </body>
 </html> 
