--- a/neuropack/web/static/index.html
+++ b/neuropack/web/static/index.html
@@ -2,36 +2,41 @@
 <html>
 <head>
     <title>NeuroPack Topology</title>
-    <script src="static/js/d3.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
         body {
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
-            background: #1a1a1a;
-            color: #ffffff;
+            font-family: 'Courier New', monospace;
+            background: #000000;
+            color: #33ff33;
+            overflow: hidden;
         }
-        #topology-container {
+        #topology {
             width: 100vw;
             height: 100vh;
         }
-        .node {
-            fill: #4CAF50;
-            stroke: #fff;
-            stroke-width: 2px;
+        .tooltip {
+            position: absolute;
+            display: none;
+            background: rgba(0, 0, 0, 0.9);
+            border: 1px solid #33ff33;
+            padding: 10px;
+            pointer-events: none;
         }
-        .link {
-            stroke: #999;
-            stroke-opacity: 0.6;
-        }
-        .node text {
-            fill: white;
-            font-size: 12px;
+        .connection-status {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            padding: 5px;
+            z-index: 1000;
         }
     </style>
 </head>
 <body>
-    <div id="topology-container"></div>
-    <script src="static/js/topology.js"></script>
+    <div class="connection-status">● Connecting...</div>
+    <div id="topology"></div>
+    <div class="tooltip"></div>
+    <script src="/static/js/topology.js"></script>
 </body>
 </html> 
