--- a/neuropack/web/static/index.html
+++ b/neuropack/web/static/index.html
@@ -23,6 +23,9 @@
             border: 1px solid #33ff33;
             padding: 10px;
             pointer-events: none;
+            color: #33ff33;
+            font-family: 'Courier New', monospace;
+            font-size: 12px;
         }
         .connection-status {
             position: fixed;
@@ -30,6 +33,15 @@
             right: 10px;
             padding: 5px;
             z-index: 1000;
+        }
+        .node rect {
+            fill: #1a1a1a;
+            stroke: #33ff33;
+            stroke-width: 2;
+        }
+        .link {
+            stroke: #999;
+            stroke-opacity: 0.6;
         }
     </style>
 </head>
@@ -39,4 +51,4 @@
     <div class="tooltip"></div>
     <script src="/static/js/topology.js"></script>
 </body>
-</html> 
+</html>
