--- a/neuropack/web/static/index.html
+++ b/neuropack/web/static/index.html
@@ -26,6 +26,7 @@
             color: #33ff33;
             font-family: 'Courier New', monospace;
             font-size: 12px;
+            z-index: 1000;
         }
         .connection-status {
             position: fixed;
@@ -42,6 +43,9 @@
         .link {
             stroke: #999;
             stroke-opacity: 0.6;
+        }
+        .node text {
+            fill: #33ff33;
         }
     </style>
 </head>
