--- a/neuropack/web/static/index.html
+++ b/neuropack/web/static/index.html
@@ -19,9 +19,12 @@
         .tooltip {
             position: absolute;
             display: none;
-            background: rgba(0, 0, 0, 0.9);
+            background: rgba(0, 10, 0, 0.95);
             border: 1px solid #33ff33;
-            padding: 10px;
+            box-shadow: 0 0 10px rgba(51, 255, 51, 0.3);
+            padding: 15px;
+            border-radius: 5px;
+            max-width: 300px;
             pointer-events: none;
             color: #33ff33;
             font-family: 'Courier New', monospace;
@@ -32,7 +35,11 @@
             position: fixed;
             top: 10px;
             right: 10px;
-            padding: 5px;
+            background: rgba(0, 10, 0, 0.8);
+            border: 1px solid #33ff33;
+            border-radius: 5px;
+            padding: 8px 15px;
+            box-shadow: 0 0 10px rgba(51, 255, 51, 0.2);
             z-index: 1000;
         }
         .node rect {
@@ -43,9 +50,36 @@
         .link {
             stroke: #999;
             stroke-opacity: 0.6;
+            animation: linkPulse 3s infinite;
         }
         .node text {
             fill: #33ff33;
+            text-shadow: 0 0 5px rgba(51, 255, 51, 0.5);
+        }
+        @keyframes pulse {
+            0% {
+                stroke-opacity: 0.6;
+                stroke-width: 2px;
+            }
+            50% {
+                stroke-opacity: 1;
+                stroke-width: 3px;
+            }
+            100% {
+                stroke-opacity: 0.6;
+                stroke-width: 2px;
+            }
+        }
+        @keyframes linkPulse {
+            0% {
+                stroke-opacity: 0.4;
+            }
+            50% {
+                stroke-opacity: 0.8;
+            }
+            100% {
+                stroke-opacity: 0.4;
+            }
         }
     </style>
 </head>
